<resources>
    <string name="app_name">成电微记</string>
    <string name="diary">Diary</string>
    <string name="bill">Bill</string>
    <string name="todo">Todo</string>
    <string name="me">Me</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="empty_user_name_hint">请输入用户名</string>
    <string name="sign_hint">本人还没有填写简介</string>
    <string name="user_avatar_description">User\'s avatar</string>
    <string name="my_info">我的信息</string>
    <string name="mine_help">帮助</string>
    <string name="mine_setting">设置</string>
    <string name="mine_theme">更换主题</string>
    <string name="mine_about">关于</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="camera">拍照</string>
    <string name="album">从相册中选择</string>
    <string name="change_border_color">随机更换边框颜色</string>
    <string name="crop_image_activity_title">裁剪图片</string>
    <string name="crop_image_button_title">裁剪</string>


    <!--for Toast-->
    <string name="toast_unsettled_onclick">未录入的点击事件</string>
    <string name="toast_success_avatar">修改头像成功</string>
    <string name="toast_success_save_avatar">保存头像成功</string>
    <string name="toast_fail_avatar">修改头像失败</string>
    <string name="toast_fail_save_avatar">保存头像失败</string>
    <string name="toast_null_picture">传入图片为空</string>
    <string name="toast_fail_create_dir">创建文件夹失败</string>

    <!--for TodoItem-->
    <string name="add_todo_hint">请输入您的待办事项</string>
    <string name="new_todo_save">保存</string>

    <!--for Color-->
    <string name="white">简洁白</string>
    <string name="gal_pink">少女粉</string>
    <string name="high_red">高能红</string>
    <string name="egg_yellow">咸蛋黄</string>
    <string name="grass_green">早苗绿</string>
    <string name="jewelry_blue">宝石蓝</string>
    <string name="roland_purple">罗兰紫</string>
    <string name="black">主题黑</string>
    <string name="theme_color">主题颜色</string>
    <string name="theme_setting">个性设置</string>
    <string name="choose_color">选择颜色</string>


    <!-- Preference Titles -->
    <string name="basic_info_header">基础信息</string>
    <string name="more_info_header">更多信息</string>

    <!-- MyInfo Titles -->
    <string name="name_title">设置昵称</string>
    <string name="sign_title">设置简介</string>
    <string name="gender_title">性别</string>
    <string name="birth_title">生日</string>
    <string name="email_title">邮箱</string>
    <string name="education_title">教育经历</string>
    <string name="not_set">未设置</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="about_fragment_label">关于</string>
    <string name="about_contact_fragment_label">联系我们</string>
    <string name="writer">项目参与者</string>
    <string name="chen_xi">陈曦</string>
    <string name="jako">周哲贤</string>
    <string name="xin_xuan">吴昕璇</string>

    <!-- Strings used for EditActivity -->
    <string name="diary_title">标题</string>
    <string name="edit_hint">写下你的心情~</string>
    <string name="share">分享</string>
    <string name="skin">皮肤</string>
    <string name="more">更多</string>
    <string name="setting">Setting</string>
    <string name="delete_diary">删除日记</string>
    <string name="delete_diary_qe">确认删除该条笔记吗？</string>
    <string name="diary_cover_tint">日记封面</string>
    <string name="diary_cover_tint_text">日 记 封 面 \n····\nDiary Cover</string>
    <string name="diary_footer">成电微记\n····</string>
    <string name="somewhere">某处过往</string>
    <string name="edit_location">编辑位置</string>
    <string name="submit">确认</string>

    <!-- Strings used for Bill -->
    <string name="bill_out">支出</string>
    <string name="bill_in">收入</string>

    <!-- Strings used for GDLocationPickerActivity -->
    <string name="change_location_sure">选择地址</string>
    <string name="location_info">地址信息</string>

</resources>