<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/edit_location"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_text" />

        <EditText
            android:id="@+id/location_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/somewhere"
            android:maxLines="2"
            android:textSize="20sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white_D5"
                android:backgroundTintMode="src_over"
                android:insetRight="10dp"
                android:stateListAnimator="@null"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/jewelry_blue"
                android:insetLeft="10dp"
                android:stateListAnimator="@null"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:cornerRadius="30dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>