<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_todo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center"
    app:defaultNavHost="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:textColor="@color/white"
            android:background="#44D3FF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/todo_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/add_todo_hint"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints=""/>

        <Button
            android:id="@+id/add_todo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginBottom="30dp"
            android:background="#009688"
            android:text="@string/new_todo_save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>