<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/photo_select_pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/whiteTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_outline_top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/pop_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/cardcolor_to_background"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_icons_camera" />


        <TextView
            android:id="@+id/pop_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardcolor_to_background"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/album"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_photo_album" />


        <androidx.cardview.widget.CardView
            android:id="@+id/pop_photo_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white_F0"
            android:backgroundTint="@color/background_to_cardcolor"
            android:gravity="center"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>