<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="transition_diary_fab"
    tools:context=".ui.diary.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?cardColor"
            app:contentScrim="?mainColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/diary_cover_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?actionBarSize"
                android:fontFamily="@font/roundfont"
                android:gravity="center"
                android:text="@string/diary_cover_tint_text" />

            <!--height just for show,modify in run time-->

            <com.shehuan.niv.NiceImageView
                android:id="@+id/diary_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="?actionBarSize"
                android:background="@android:color/transparent"
                android:contentDescription="@string/diary_cover_tint"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                android:transitionName="transition_diary_cover"
                app:layout_collapseMode="parallax" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_left">

                <ImageButton
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/more"
                    android:padding="10dp"
                    android:src="@drawable/ic_more" />

                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/share"
                    android:padding="10dp"
                    android:src="@drawable/ic_share" />

                <ImageButton
                    android:id="@+id/skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/skin"
                    android:padding="10dp"
                    android:src="@drawable/ic_clothes2" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/edit_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/extra_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/diary_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="11月4日 晚上10:44"
                    android:textColor="?android:textColorHint"
                    android:textSize="15sp"
                    android:transitionName="transition_diary_date"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text=" | "
                    android:textColor="?android:textColorHint"
                    android:textSize="17sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/diary_text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="0"
                    android:textColor="?android:textColorHint"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text=" 字"
                    android:textColor="?android:textColorHint"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <EditText
                    android:id="@+id/diary_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="null"
                    android:background="@color/white"
                    android:fontFamily="@font/roundfont"
                    android:hint="@string/diary_title"
                    android:inputType="textMultiLine"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="15dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="?android:textColorHint"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:transitionName="transition_diary_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/rich_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="null"
                    android:background="@color/white"
                    android:fontFamily="@font/roundfont"
                    android:gravity="start"
                    android:hint="@string/edit_hint"
                    android:inputType="textMultiLine"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="15dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="?android:textColorHint"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/diary_edit_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/diary_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/diary_footer"
                android:fontFamily="@font/roundfont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>